﻿EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==04/11/2010==
Derision: SoD - Corpses should now vanish instantly rather than decay when using /hidecorpse.
Derision: SoD - Players can now see other players buffs in their target window.
Derision: SoD - Tracking - Player filter now works.

==04/10/2010==
Trevius: SoD - Identified showhelm in the spawn struct.
Trevius: SoD - Corrected Face in the Player Profile.  Frogloks and Vah Shir now show matching head and body correctly.
Trevius: SoD - Added Mana and Endurance update packets for clients.

==04/08/2010==
Derision: SoD - Tracking Auto-refresh should no longer fail with Recovery timer not met.
Derision: SoD - Previously memmed spells are now unmemmed when loading a spell set.
Derision: SoD - Added Slot conversion to ApplyPoison_Struct (Apply poison should work as well as Titanium).
Derision: AllButSoD - Fixed bug in Barter code.

==04/06/2010==
Derision: SoD - Players may now be tracked and fixed a bug where tracking would not work when switching tracking targets without cancelling tracking.
Derision: SoD - Initial work on /hidecorpse serverside support. All but /hidecorpse looted should work.

==04/05/2010==
Derision: SoD - Loot All now works.

==04/04/2010==
Derision: SoD - Group member (client or bot) mana and endurance should update correctly in the group window.
Derision: SoD - Altered SpawnStruct encode to send colors for all playable races (including corpses and NPCs).
Derision: SoD - Group Main Assist may be assigned via the Group Window. As the group leader cannot explicitly assign it to himself, use /grouproles set <leadername> 2
Leere:	A moving mob that becomes mezzed will no longer appear to continue moving.
Fourier: Added location to the output of #listnpc.

==04/03/2010==
Trevius: SoF/SoD - Total Spent AA Points now show correctly for these 2 clients.