@@ -4,6 +4,7 @@
 Derision: SoD - Corpses should now vanish instantly rather than decay when using /hidecorpse.
 Derision: SoD - Players can now see other players buffs in their target window.
 Derision: SoD - Tracking - Player filter now works.
+Trevius: SoD - Added Primary/Secondary weapon textures into the spawn struct for non-playable races.
 
 ==04/10/2010==
 Trevius: SoD - Identified showhelm in the spawn struct.
